--- a/index.html
+++ b/index.html
@@ -6,10 +6,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sport db</title>
+    <link rel="stylesheet" href="">
+    <!-- bootstarp cdn -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
 
+
+
+    <div class="container">
+        <div class="row w-100 m-auto">
+            <div class="col-md-6 ">
+                <h1>left side </h1>
+                <div class="input-group mb-3">
+                    <input type="text" id="search-box" class="form-control" placeholder="enter your player Name"
+                        aria-label="Recipient's username" aria-describedby="basic-addon2">
+                    <div class="input-group-append">
+                        <button onclick="allPlayer()" class="btn btn-outline-secondary" type="button">search</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <h1>right side</h1>
+            </div>
+
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+    <script src="js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
