--- a/index.html
+++ b/index.html
@@ -27,9 +27,15 @@
                         <button onclick="allPlayer()" class="btn btn-outline-secondary" type="button">search</button>
                     </div>
                 </div>
+                <div class="  text-center" id="player-container">
+
+                </div>
             </div>
             <div class="col-md-6">
                 <h1>right side</h1>
+                <div id="deatil-container" class="details-container">
+
+                </div>
             </div>
 
         </div>
