--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sport db</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="style/style.css">
     <!-- bootstarp cdn -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -27,6 +27,7 @@
                         <button onclick="allPlayer()" class="btn btn-outline-secondary" type="button">search</button>
                     </div>
                 </div>
+                <img id="spiner" width="50%" src="img/Loading_icon.gif" alt="">
                 <div class="  text-center" id="player-container">
 
                 </div>
@@ -34,7 +35,10 @@
             <div class="col-md-6">
                 <h1>right side</h1>
                 <div id="deatil-container" class="details-container">
-
+                    <div class="img-container  w-50 ">
+                        <img id="female" class="w-75" src="" alt="">
+                        <img id="male" class="w-75" src="" alt="">
+                    </div>
                 </div>
             </div>
 
